populated README and fixed database password